crates/ars-components/src/overlay/floating_panel/snapshots/ars_components__overlay__floating_panel__tests__floating_panel_resize_handle_se.snap
---
source: crates/ars-components/src/overlay/floating_panel/mod.rs
expression: "snapshot_attrs(&api.resize_handle_attrs(ResizeHandle::SE))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-handle",
            ),
            String(
                "se",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "resize-handle",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "floating-panel",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Resize bottom-right",
            ),
        ),
    ],
    styles: [
        (
            Cursor,
            "nwse-resize",
        ),
    ],
}
