crates/ars-components/src/overlay/floating_panel/snapshots/ars_components__overlay__floating_panel__tests__floating_panel_root_resizing.snap
---
source: crates/ars-components/src/overlay/floating_panel/mod.rs
expression: snapshot_attrs(&resizing.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-focus-visible",
            ),
            String(
                "true",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-resizing",
            ),
            String(
                "true",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "floating-panel",
            ),
        ),
        (
            Data(
                "ars-stage",
            ),
            String(
                "default",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "resizing",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "floating-panel-title",
            ),
        ),
        (
            Aria(
                Modal,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "floating-panel",
            ),
        ),
        (
            Role,
            String(
                "dialog",
            ),
        ),
    ],
    styles: [
        (
            Width,
            "400px",
        ),
        (
            Height,
            "300px",
        ),
        (
            Position,
            "fixed",
        ),
        (
            Top,
            "100px",
        ),
        (
            Left,
            "100px",
        ),
        (
            ZIndex,
            "90",
        ),
    ],
}
